Show Blog Invitations
This refactors the forum invitation code,
so it can be used by both: forums and blogs.

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -316,6 +316,10 @@
 	<string name="blogs_sharing_invitation_received">%1$s has shared the personal blog of %2$s with you.</string>
 	<string name="blogs_sharing_invitation_sent">You have shared the personal blog of %1$s with %2$s.</string>
 	<string name="blogs_sharing_show_invitations">Show Blog Invitations</string>
+	<string name="blogs_sharing_invitations_title">Blog Invitations</string>
+	<string name="blogs_sharing_exists">You are subscribed to this blog already.\nWarning: Accepting again might reveal that %s is your contact.</string>
+	<string name="blogs_sharing_joined_toast">Subscribed to Blog</string>
+	<string name="blogs_sharing_declined_toast">Blog Invitation Declined</string>
 
 	<string name="blogs_blog_list">Blog List</string>
 	<string name="blogs_available_blogs">Available Blogs</string>
