--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -297,15 +297,13 @@
 	<string name="blogs_blog_post_received">New Blog Post Received</string>
 	<string name="blogs_blog_post_scroll_to">Scroll To</string>
 	<string name="blogs_blog_failed_to_load">Blog failed to load</string>
-	<string name="blogs_blog_post_failed_to_load">Blog Post failed to load</string>
+	<string name="blogs_blog_post_failed_to_load">Blog post failed to load</string>
 	<string name="blogs_feed_empty_state">This is the global blog feed.\n\nIt looks like nobody blogged anything, yet.\n\nBe the first and tap the pen icon to write a new blog post.</string>
 	<string name="blogs_personal_blog">%s\'s Personal Blog</string>
-	<string name="blogs_delete_blog">Delete Blog</string>
-	<string name="blogs_delete_blog_dialog_message">Are you sure that you want to delete this Blog and all posts?\nNote that this will not delete the blog from other people\'s devices.</string>
-	<string name="blogs_delete_blog_ok">Delete Blog</string>
-	<string name="blogs_delete_blog_cancel">Keep</string>
-	<string name="blogs_blog_deleted">Blog Deleted</string>
 	<string name="blogs_remove_blog">Remove Blog</string>
+	<string name="blogs_remove_blog_dialog_message">Are you sure that you want to remove this blog and all posts?\nNote that this will not remove the blog from other people\'s devices.</string>
+	<string name="blogs_remove_blog_ok">Remove Blog</string>
+	<string name="blogs_blog_removed">Blog Removed</string>
 	<string name="blogs_sharing_share">Share Blog</string>
 	<string name="blogs_sharing_error">There was an error sharing this blog.</string>
 	<string name="blogs_sharing_button">Share Blog</string>
